<resources>
    <string name="app_name">Quiz</string>
    <string name="enter_your_name">Введите ваше имя</string>
    <string name="next">Далее</string>
    <string name="enter_the_name_of_another_player_or_wait_for_invitation">
        Введите имя соперника или подождите, пока вас не пригласят</string>
    <string name="your_name">Ваше имя</string>
    <string name="another_player">Имя соперника</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="do_you_want_to_play_with_the_player_P1">Сыграть с \"%1$s\"?</string>
    <string name="give_answer">Ответить</string>
    <string name="play_again">Сыграть заново</string>
    <string name="choose_another_player">Выбрать другого игрока</string>
    <string name="the_name_P1_is_taken">Имя \"%1$s\" занято</string>
    <string name="another_player_does_not_want_to_play">Другой игрок не хочет играть</string>
    <string name="unknown_error_on_the_side_of_another_player">
        Неизвестная ошибка на стороне другого игрока</string>
    <string name="the_player_P1_has_left_the_game">Игрок \"%1$s\" покинул игру</string>
    <string name="the_player_P1_is_waiting_for_accepting_the_invitation">
        Игрок \"%1$s\" ждёт подтверждение приглашения от другого игрока</string>
    <string name="the_player_P1_does_not_exist">Игрока \"%1$s\" не существует</string>
    <string name="the_player_P1_has_refused_the_invitation">
        Игрок \"%1$s\" отказался от приглашения</string>
    <string name="you_can_not_invite_yourself">Вы не можете пригласить самого себя</string>
    <string name="invited_player_P1_is_deciding_whether_to_play_with_another">
        Приглашённый игрок \"%1$s\" решает, играть ли с другим игроком</string>
    <string name="finish_your_score_P1_score_of_another_player_P2_P3">
        Игра завершена\n\nВаш результат: %1$d\nРезультат \"%2$s\": %3$d
    </string>
    <string name="connection_lost">Связь потеряна</string>
</resources>